k8s/testlab/oauth2-proxy/echoserver.yaml
apiVersion: extensions/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: oauth2-proxy
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: echoserver
    namespace: oauth2-proxy
    spec:
      containers:
      - image: gcr.io/google_containers/echoserver:latest
        imagePullPolicy: Always
        name: echoserver
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: oauth2-proxy
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: echoserver
