k8s/testlab/oauth2-proxy/echoserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  #   ingress.kubernetes.io/oauth: oauth2_proxy
    haproxy-ingress.github.io/rewrite-target: "/"
  name: echoserver
  namespace: oauth2-proxy
spec:
  ingressClassName: haproxy
  tls:
    - secretName: cert-echo-production
      hosts:
        - echo.emisia.net
  rules:
  - host: echo.emisia.net
    http:
      paths:
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 4180
      - path: /abc
        pathType: Prefix
        backend:
          service:
            name: echoserver
            port:
              number: 8080
